--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,16 +18,15 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+title: Lettres 1870-1871
+email: raphink+lettres1870@gmail.com
+description: >- 
+  Une collection de lettres de 1870-1871 envoyées depuis Paris
+  au cours du siège par les Prussiens, puis de la Commune.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: raphink
+github_username:  raphink
 
 # Build settings
 theme: jekyll-theme-merlot
