--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -9,9 +9,8 @@ source "https://rubygems.org"
 # Happy Jekylling!
 gem "jekyll", "~> 3.3"
 # This is the default theme for new Jekyll sites. You may change this to anything you like.
-gem "minima", "~> 2.5"
-gem "minimal-mistakes-jekyll"
-gem "jekyll-theme-leap-day"
+#gem "minima", "~> 2.5"
+gem "jekyll-theme-merlot"
 gem "kramdown-parser-gfm"
 
 # If you want to use GitHub Pages, remove the "gem "jekyll"" above and
