--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -19,6 +19,7 @@ gem "kramdown-parser-gfm"
 # If you have any plugins, put them here!
 group :jekyll_plugins do
   gem "jekyll-feed", "~> 0.12"
+  gem "jekyll-microtypo"
 end
 
 # Windows and JRuby does not include zoneinfo files, so bundle the tzinfo-data gem
