--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Lettres de 1870-1871
+title: Nouvelles de Paris
 email: raphink+lettres1870@gmail.com
 description: >- 
   Une collection de lettres de 1870-1871 envoyées depuis Paris
