--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -23,8 +23,8 @@ email: raphink+lettres1870@gmail.com
 description: >- 
   Une collection de lettres de 1870-1871 envoyées depuis Paris
   au cours du siège par les Prussiens, puis de la Commune.
-baseurl: "/" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://1870.info" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: raphink
 github_username:  raphink
 
