--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -33,6 +33,8 @@ github_username:  raphink
 theme: jekyll-theme-merlot
 plugins:
   - jekyll-feed
+  - jekyll-microtypo
+  - jekyll-sitemap
 
 
 # Exclude from processing.
