--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -30,12 +30,14 @@ locale: 'fr_FR'
 timezone: 'Europe/Paris'
 
 
-twitter_username: "@1870Paris"
 github_username:  raphink
 social:
   name: Nouvelles de Paris
   links:
     - https://twitter.com/1870Paris
+twitter:
+  username: "1870Paris"
+  card: summary
 
 
 # Build settings
