--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -29,7 +29,7 @@ lang: 'fr'
 locale: 'fr_FR'
 timezone: 'Europe/Paris'
 
-permalink: /:categories/:year/:year-:month-:day_:title/
+#permalink: /:categories/:year/:year-:month-:day_:title/
 
 
 github_username:  raphink
