Add "modification" link
Signed-off-by: Raphaël Pinson <raphael.pinson@camptocamp.com>

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -31,6 +31,8 @@ timezone: 'Europe/Paris'
 
 #permalink: /:categories/:year/:year-:month-:day_:title/
 
+github:
+  repository_url: https://github.com/raphink/lettres_1870
 
 github_username:  raphink
 social:
